# autobuild

./: .gitignore  DESIGN.md  INSTALLATION.md  README.md  USAGE.md  pyproject.toml
.autobuild/: config.yaml
.autobuild/backlog/: 002-example.md
.autobuild/criteria/: faithfulness.md
.autobuild/gates/: faithfulness.md  ui_quality.md
autobuild/: __init__.py  agent.py  cli.py  cli_llm.py  config.py  cursor_llm.py  llm.py  models.py  orchestrator.py  prompts.py  task_loader.py  workspace.py
autobuild/gates/: faithfulness.md
autobuild/judge/: __init__.py  engine.py
autobuild/tests/: test_agent_error_handling.py  test_cli.py  test_config.py  test_cursor_llm.py  test_judge_error_handling.py  test_orchestrator.py  test_task_loader.py
backlog/: 001-example.md  001-example.yaml  001b.yaml  002-example.yaml
src/: app.css  app.js  coneChart.js  distributions.js  index.html  main.js  model.js  monteCarlo.js  npv.js  npvModel.js  package-lock.json  package.json  random.js  simulation.js  statistics.js  variable.js  vitest.config.mts
src/css/: app.css
src/js/: analysis.js  app.js  chart.js  cone-chart.js  distributions.js  model.js  npv-model.js  npvCore.js  simulation.js  statistics.js  variable.js
src/montecarlo/: model.js  simulate.js  stats.js  variables.js
src/src/: distributions.js  model.js  simulation.js  statistics.js
src/test/: analysis.test.js  distributions.test.js  model.test.js  monteCarlo.test.js  npv-model.test.js  npvModel.test.js  simulate.test.js  (+5 more)
tests/: test_config.py  test_cursor_llm.py  test_orchestrator.py  test_task_loader.py
(+12 files in other folders)
