[project]
name = "autobuild"
version = "0.1.0"
description = "Agentic development framework that runs multiple implementation strategies and selects the best via LLM-judged tournaments."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Autobuild", email = "dev@example.com" },
]
dependencies = [
  "pyyaml>=6.0",
  "json-repair>=0.58",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
autobuild = "autobuild.cli:main"

[tool.setuptools.packages.find]
include = ["autobuild*"]

[tool.pytest.ini_options]
testpaths = ["autobuild/tests"]
markers = [
    "integration: tests that call the real cursor-agent CLI (require a valid Cursor session)",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

